--- a/src/App.css
+++ b/src/App.css
@@ -577,49 +577,53 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .new-email-bx {
   background: #fff;
   padding: 5px;
-  border-radius: 20px;
+  border-radius: 10px;
   position: relative;
   z-index: 0;
-  display: flex;
+  display: flex; 
   align-items: center;
+  margin-left: 100px; /* Adjust this value to move the box to the right */
 }
 .new-email-bx::before {
   content: "";
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   border-radius: 20px;
-  position: absolute;
+  position: center;
   z-index: -1;
   top: -1px;
   left: -1px;
   bottom: -1px;
   right: -1px;
+  
 }
 .new-email-bx::after {
   content: "";
   background: #fff;
   border-radius: 20px;
-  position: absolute;
+  position: center;
   z-index: -1;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
+  
 }
-.new-email-bx input {
+/* .new-email-bx input {
   width: 100%;
   color: #121212;
   font-weight: 500;
   background: transparent;
   border: 0;
   padding: 0 15px;
-}
+} */
 .new-email-bx button {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 20px 65px;
+  padding: 20px 95px;
   color: #fff;
   font-weight: 500;
   letter-spacing: 0.5px;
   border-radius: 18px;
+  margin-left: 100px;
 }
 .footer img {
   width: 26%;
